--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
     <button id="captureBtn" onclick="captureAndProcess()">
       Rasm Olish va Word Yaratish
     </button>
-    <script src="libs/tesseract.min.js"></script>
-    <script src="libs/docx.min.js"></script>
-    <script src="libs/FileSaver.min.js"></script>
-    <script src="script.js"></script>
+    <!-- Tesseract.js (OCR uchun) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tesseract.js/2.1.1/tesseract.min.js"></script>
+
+    <!-- docx.js (Word fayllar uchun) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/docx/7.1.0/docx.min.js"></script>
+
+    <!-- FileSaver.js (Faylni yuklash uchun) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
   </body>
 </html>
