--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
         max-width: 600px;
         margin: 0 auto;
         padding: 20px;
+        text-align: center;
       }
       #video,
       #photo {
         width: 100%;
-        max-width: 400px;
+        max-width: 100%;
+        height: auto;
         margin-bottom: 10px;
       }
       button {
@@ -52,9 +54,10 @@
 
       startButton.addEventListener("click", async () => {
         try {
+          // Mobil qurilmalar uchun video o'lchamlarini dinamik sozlash
           stream = await navigator.mediaDevices.getUserMedia({
             video: {
-              facingMode: "environment",
+              facingMode: "environment", // Orqa kamera
               width: { ideal: 1280 },
               height: { ideal: 720 },
             },
